log labels and scrollbar fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -724,7 +724,7 @@ table tr td span:hover{
     background: #121212;
     color: white;
     padding: 20px;
-    width: 250px;
+    width: 260px;
     height: 200px;
     box-shadow: 3px 16px 100px 0px black;
     border-bottom-left-radius: 5px;
@@ -781,15 +781,19 @@ table tr td span:hover{
 
 .event-logs-container::-webkit-scrollbar-track{
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-	background-color: #F5F5F5;
+	background-color: #212121;
+	border-radius: 15px;
 }
 
 .event-logs-container::-webkit-scrollbar{
 	width: 12px;
-	background-color: #F5F5F5;
+	background-color: #212121;
+	border-radius: 15px;
 }
 
 .event-logs-container::-webkit-scrollbar-thumb{
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-	background-color: #555;
+	background-color: #121212;
+	border: 1px solid #444;
+	border-radius: 15px;
 }
